--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p><strong>App Version:</strong> 1.0</p>
     <p><strong>Platform:</strong> iOS</p>
 
-    <p>For privacy details, view our <a href="https://paulhenien.github.io/confessionmanager-support/privacy.html">Privacy Policy</a>.</p>
+    <p>For privacy details, view our <a href="https://phenien.github.io/confessionmanager-support/privacy.html">Privacy Policy</a>.</p>
   </main>
 
   <footer>
