Update support email address in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <main>
     <p>If you need help with the <strong>Confession Manager</strong> app, or have feedback or questions, please contact:</p>
-    <p><a href="mailto:support@paulhenien.com">support@paulhenien.com</a></p>
+    <p><a href="mailto:smassservice@gmail.com">smassservice@gmail.com</a></p>
 
     <hr style="margin: 2rem 0; border: none; border-top: 1px solid #d8cbb9;" />
 
