--- a/privacy.html
+++ b/privacy.html
@@ -87,7 +87,7 @@
 
     <h2>7. Contact</h2>
     <p>If you have questions or concerns about this policy, please contact:</p>
-    <p><a href="mailto:support@paulhenien.com">support@paulhenien.com</a></p>
+    <p><a href="mailto:smassservice@gmail.com">smassservice@gmail.com</a></p>
 
     <p>We take privacy seriously and continuously work to maintain user trust through transparency and secure design.</p>
   </main>
